# kraken-agent

./: .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eleventy.config.js  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: full_deployment_smoke.sh
.github/workflows/: ci.yml  docs.yml  publish-sdk.yml
concepts/architecture/: index.html
concepts/identity/: index.html
concepts/memory/: index.html
concepts/sessions/: index.html
concepts/skills/: index.html
developer/contributing/: index.html
developer/project-structure/: index.html
docs/: index.md
docs/_data/: navigation.json
docs/concepts/: architecture.md  memory.md  (+3 more)
research/: 01-hermes-agent-research.md  02-openclaw-research.md  03-graphrag-memory-research.md  04-architecture-document.md
sdk/python/: README.md  pyproject.toml
sdk/python/kraken/: __init__.py  _transport.py  async_client.py  async_files.py  async_identity.py  async_memory.py  async_schedules.py  async_sessions.py  async_skills.py  async_tools.py  async_voice.py  client.py  discord.py  exceptions.py  files.py  identity.py  memory.py  models.py  py.typed  schedules.py  sessions.py  skills.py  tools.py  voice.py
sdk/python/tests/: test_async_client.py  test_async_schedules.py  test_client.py  test_exceptions.py  test_identity.py  test_memory.py  test_models.py  test_schedules.py  test_sessions.py  test_skills.py  test_tools.py  test_transport.py
search/: search_index.json
server/: Dockerfile  drizzle.config.ts  entrypoint.sh  eslint.config.js  package-lock.json  package.json  sandbox.Dockerfile
stylesheets/: extra.css
web/: package-lock.json  package.json  vite.config.ts
(+106 files in other folders)
