[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraken-agent"
version = "0.2.0"
description = "Python SDK for the Kraken Agent API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Kraken Contributors" }]
keywords = ["ai", "agent", "graphrag", "llm", "kraken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.27,<1"]
discord = [
    "discord.py[voice]>=2.4.0",
    "PyNaCl>=1.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://kraken-agent.com"
Documentation = "https://kraken-agent.com"
Repository = "https://github.com/kraken-agent/kraken-agent"
Changelog = "https://github.com/kraken-agent/kraken-agent/releases"
Issues = "https://github.com/kraken-agent/kraken-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["kraken"]

[tool.hatch.build.targets.sdist]
include = [
    "kraken/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
